renamed vector_list source file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,6 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 add_executable(review src/review.cpp)
 add_executable(string_processing src/string_processing.cpp src/utils.h src/utils.cpp)
-add_executable(arrays src/arrays.cpp)
+add_executable(vector_list src/vector_list.cpp)
 add_executable(class_example src/class_example.cpp)
 #target_link_libraries(string_processing 
