renamed hello_world source file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 #configure_file(src/Config.h.in src/Config.h)
 
 
-add_executable(review src/review.cpp)
+add_executable(hello_world src/hello_world.cpp)
 add_executable(string_processing src/string_processing.cpp src/utils.h src/utils.cpp)
 add_executable(vector_list src/vector_list.cpp)
 add_executable(class_example src/class_example.cpp)
