--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,5 +18,7 @@ add_executable(thief src/thief.cpp)
 add_executable(binary_search src/binary_search.cpp)
 add_executable(merge_sort src/merge_sort.cpp)
 add_executable(zigzag src/zigzag.cpp)
+add_executable(weird_algorithm src/weird_algorithm.cpp)
+add_executable(missing_number src/missing_number.cpp)
 #add_executable(football_maps src/football_maps.cpp)
 #target_link_libraries(string_processing 
