--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,11 +14,12 @@ add_compile_options(-std=c++14 -g) # -g for debug
 # add_executable(factorial src/factorial.cpp)
 # add_executable(smart_pointers src/smart_pointers.cpp)
 # add_executable(apple src/apple.cpp)
-add_executable(thief src/thief.cpp)
-add_executable(binary_search src/binary_search.cpp)
-add_executable(merge_sort src/merge_sort.cpp)
+# add_executable(thief src/thief.cpp)
+# add_executable(binary_search src/binary_search.cpp)
+# add_executable(merge_sort src/merge_sort.cpp)
 add_executable(zigzag src/zigzag.cpp)
-add_executable(weird_algorithm src/weird_algorithm.cpp)
-add_executable(missing_number src/missing_number.cpp)
+# add_executable(weird_algorithm src/weird_algorithm.cpp)
+# add_executable(missing_number src/missing_number.cpp)
+# add_executable(sony src/sony.cpp)
 #add_executable(football_maps src/football_maps.cpp)
 #target_link_libraries(string_processing 
